// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`confirm state 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #FF6257;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-right: 16px;
}

.c12:focus-visible,
.teleport-button__force-focus-visible .c12 {
  background-color: #FF6257;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #FF6257;
}

.c12:hover,
.teleport-button__force-hover .c12 {
  background-color: #FF8179;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c12:active,
.teleport-button__force-active .c12 {
  background-color: #FFA19A;
  border-color: transparent;
  color: #000000;
}

.c12:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c13:focus-visible,
.teleport-button__force-focus-visible .c13 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c13:hover,
.teleport-button__force-hover .c13 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c13:active,
.teleport-button__force-active .c13 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c13:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-bottom: 24px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

.c9 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <h2
          class="c6"
        >
          Delete User?
        </h2>
      </div>
      <div
        class="c7 c8 c9"
      >
        <div
          class="c10"
        >
          You are about to delete user
          <span
            class="c11"
          >
             somename
          </span>
          . This will revoke the user's access to this cluster.
        </div>
      </div>
      <div
        class="c7"
      >
        <button
          class="c12"
          fill="filled"
        >
          I understand, delete user
        </button>
        <button
          class="c13"
          fill="filled"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed state 1`] = `
.c12 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c10 {
  border-radius: 8px;
  box-sizing: border-box;
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 12px 16px;
  overflow: auto;
  word-break: break-word;
  border: 2px solid;
  display: flex;
  align-items: center;
  background: rgba(255, 98, 87, 0.1);
  border-color: #FF6257;
}

.c10 a {
  color: #FFFFFF;
}

.c11 {
  border-radius: 50%;
  line-height: 0;
  margin-right: 16px;
  color: #000000;
  background: #FF6257;
  padding: 8px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  flex: 1;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #FF6257;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-right: 16px;
}

.c17:focus-visible,
.teleport-button__force-focus-visible .c17 {
  background-color: #FF6257;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #FF6257;
}

.c17:hover,
.teleport-button__force-hover .c17 {
  background-color: #FF8179;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c17:active,
.teleport-button__force-active .c17 {
  background-color: #FFA19A;
  border-color: transparent;
  color: #000000;
}

.c17:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c18:focus-visible,
.teleport-button__force-focus-visible .c18 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c18:hover,
.teleport-button__force-hover .c18 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c18:active,
.teleport-button__force-active .c18 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c18:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-bottom: 24px;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

.c9 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <h2
          class="c6"
        >
          Delete User?
        </h2>
      </div>
      <div
        class="c7 c8 c9"
      >
        <div
          class="c10"
          kind="danger"
        >
          <div
            class="c11"
            kind="danger"
          >
            <span
              class="c12 icon icon-warning"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M12 9C12.4142 9 12.75 9.33579 12.75 9.75V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V9.75C11.25 9.33579 11.5858 9 12 9Z"
                />
                <path
                  d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M10.09 3.34287L1.88101 17.7086C1.04292 19.1753 2.10193 21.0001 3.79114 21.0001H20.2092C21.8984 21.0001 22.9574 19.1753 22.1193 17.7086L13.9103 3.34287C13.0657 1.86488 10.9346 1.86488 10.09 3.34287ZM3.18337 18.4528L11.3924 4.08708C11.6611 3.61681 12.3392 3.61681 12.6079 4.08708L20.8169 18.4528C21.0836 18.9195 20.7466 19.5001 20.2092 19.5001H3.79114C3.25367 19.5001 2.91671 18.9195 3.18337 18.4528Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              server error
            </div>
          </div>
        </div>
        <div
          class="c15"
        >
          You are about to delete user
          <span
            class="c16"
          >
             somename
          </span>
          . This will revoke the user's access to this cluster.
        </div>
      </div>
      <div
        class="c7"
      >
        <button
          class="c17"
          fill="filled"
        >
          I understand, delete user
        </button>
        <button
          class="c18"
          fill="filled"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`processing state 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #FF6257;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-right: 16px;
}

.c12:focus-visible,
.teleport-button__force-focus-visible .c12 {
  background-color: #FF6257;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #FF6257;
}

.c12:hover,
.teleport-button__force-hover .c12 {
  background-color: #FF8179;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c12:active,
.teleport-button__force-active .c12 {
  background-color: #FFA19A;
  border-color: transparent;
  color: #000000;
}

.c12:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c13:focus-visible,
.teleport-button__force-focus-visible .c13 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c13:hover,
.teleport-button__force-hover .c13 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c13:active,
.teleport-button__force-active .c13 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c13:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-bottom: 24px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

.c9 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <h2
          class="c6"
        >
          Delete User?
        </h2>
      </div>
      <div
        class="c7 c8 c9"
      >
        <div
          class="c10"
        >
          You are about to delete user
          <span
            class="c11"
          >
             somename
          </span>
          . This will revoke the user's access to this cluster.
        </div>
      </div>
      <div
        class="c7"
      >
        <button
          class="c12"
          disabled=""
          fill="filled"
        >
          I understand, delete user
        </button>
        <button
          class="c13"
          fill="filled"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;
